--- a/src/app/pages/societe/add-societe/add-societe.component.scss
+++ b/src/app/pages/societe/add-societe/add-societe.component.scss
@@ -20,5 +20,9 @@ label,.form-control{
 margin-right: 35px;
 }
 button{
-  margin-left: 390px;
+  margin-left: 370px;
+}
+.groupe{
+
+  padding-left: 355px;
 }
