--- a/src/app/pages/societe/popup/popup.component.html
+++ b/src/app/pages/societe/popup/popup.component.html
@@ -21,7 +21,7 @@
       </td>
     </tr>
     <tr>
-      <td>
+      <td class="groupe">
         <div class="form-group">
           <label for="name">Types de société</label>
           <ul>
