--- a/src/app/pages/societe/popup/popup.component.scss
+++ b/src/app/pages/societe/popup/popup.component.scss
@@ -20,5 +20,9 @@ ul{
   margin-right: 45px;
   }
   button{
-    margin-left: 375px;
+    margin-left: 370px;
+  }
+  .groupe{
+  
+    padding-left: 355px;
   }
