--- a/src/app/pages/tache/add-tache/add-tache.component.scss
+++ b/src/app/pages/tache/add-tache/add-tache.component.scss
@@ -17,8 +17,13 @@ td{
 }
 .liste{
   float: left;
-  width: 406px;
+  width: 265px;
   margin-right: 10px;
+}
+.listeNbr{
+  float: left;
+  width: 350px;
+  margin-right: 65px;
 }
 
 
