--- a/src/app/pages/tache/edit-tache/edit-tache.component.scss
+++ b/src/app/pages/tache/edit-tache/edit-tache.component.scss
@@ -16,7 +16,12 @@ padding: 12px 20px;
 border-radius: 4px;
 }
 .liste{
-float: left;
-width: 406px;
-margin-right: 10px;
+  float: left;
+  width: 265px;
+  margin-right: 10px;
+}
+.listeNbr{
+  float: left;
+  width: 350px;
+  margin-right: 65px;
 }
