--- a/src/app/pages/user/edit-user/edit-user.component.html
+++ b/src/app/pages/user/edit-user/edit-user.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>Modification de la compte</h1>
+    <h1>Modification de la User</h1>
     <hr>
 </div>
 <form>
@@ -8,13 +8,13 @@
         <td>
           <div class="form-group">
             <label for="name">Nom d'utilisateur</label>
-            <input id="name" type="text" class="form-control" [(ngModel)]="compte_user_name" name="newCompName">
+            <input id="name" type="text" class="form-control" [(ngModel)]="user_name" name="newUserNom">
           </div>
         </td>
         <td>
           <div class="form-group">
             <label for="name">N° de téléphone</label>
-            <input id="name" type="tel" class="form-control" [(ngModel)]="compte_telephone" name="newCompTelephone">
+            <input id="name" type="tel" class="form-control" [(ngModel)]="user_telephone" name="newUserTel">
           </div>
         </td>
       </tr>
@@ -22,21 +22,11 @@
         <td colspan="2">
           <div class="form-group">
             <label for="name">Email</label>
-            <input style="width: 738px;" id="name" type="email" class="form-control" [(ngModel)]="compte_email" name="newCompEmail">
+            <input style="width: 738px;" id="name" type="email" class="form-control" [(ngModel)]="user_email" name="newUserEmail">
           </div>
         </td>
       </tr>
       <tr>
-      <td>
-        <div class="form-group">
-          <label for="name">Liste des Sociétés</label>
-          <ul>
-            <li *ngFor="let societe of societesList">
-              <input type="radio" name="societe" [id]="societe.id" [value]="societe.id" [checked]="societe.checked" (change)="selectSociete(societe)" />&nbsp; {{societe.attributes.Nom}}
-          </li>
-          </ul>
-        </div>
-      </td>
       <td>
         <div class="form-group">
           <label for="name">Liste des Départements</label>
@@ -51,7 +41,7 @@
       <tr>
         <td colspan="2">
           <div>
-            <button type="button" class="btn btn-success" (click)="editCompte()">Enregistrer</button>
+            <button type="button" class="btn btn-success" (click)="editUser()">Enregistrer</button>
         </div>
         </td>
       </tr>
