--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,3 @@
-
 <section class="h-100 gradient-form" style="background-color: #eee;" style="width: 100%;">
   <div class="container py-5 h-100" style="width: 100%;">
     <div class="row d-flex justify-content-center align-items-center h-100" style="width: 100%;">
@@ -7,33 +6,27 @@
           <div class="row g-0" style="width: 100%;">
             <div class="col-12">
               <div class="card-body p-md-5 mx-md-4">
-
                 <div class="text-center">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp"
-                    style="width: 185px;" alt="logo">
-                  <h4 class="mt-1 mb-5 pb-1">We are The Lotus Team</h4>
+                  <h1 class="mt-1 mb-5 pb-1"><i class="bi bi-person-circle"></i>Authentification:</h1>
                 </div>
-
                 <form [formGroup]="loginForm">
                   <p>Please login to your account</p>
-
                   <div class="form-outline mb-4">
-                    <input type="email" id="form2Example11" class="form-control"
-                      placeholder="Phone number or email address" formControlName="email"/>
-                    <label class="form-label" for="form2Example11">Username</label>
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-person"></i></span>
+                      <input type="email" id="form2Example11" class="form-control" placeholder="Username" formControlName="email">
+                    </div>
                   </div>
-
                   <div class="form-outline mb-4">
-                    <input type="password" id="form2Example22" class="form-control" formControlName="password"/>
-                    <label class="form-label" for="form2Example22">Password</label>
+                    <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-lock-fill"></i></span>
+                    <input type="password" id="form2Example22" class="form-control" placeholder="Mot de passe" formControlName="password">
                   </div>
-
+                  </div>
                   <div class="text-center pt-1 mb-5 pb-1">
-                    <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button" [disabled]="submitted" (click)="login()">Log
-                      in</button>
+                    <button class="btn btn-success" type="button" [disabled]="submitted" (click)="login()"><i class="bi bi-box-arrow-in-right"></i> Log in</button>
                   </div>
                 </form>
-
               </div>
             </div>
           </div>
