--- a/src/app/pages/projet/add-projet/add-projet.component.scss
+++ b/src/app/pages/projet/add-projet/add-projet.component.scss
@@ -24,9 +24,16 @@ ul{
   }
   .liste{
     float: left;
-    margin-right: 40px;
-    padding-left: 25px;
-    }
-    .societe{
-      padding-left: 350px;
-     }
+    width: 265px;
+    margin-right: 10px;
+  }
+  .list{
+    float: left;
+    width: 350px;
+    margin-right: 50px;
+    margin-left: 48px;
+  }
+  button{
+    margin-left: 360px;
+  }
+  
