--- a/src/app/pages/tache/add-tache/add-tache.component.html
+++ b/src/app/pages/tache/add-tache/add-tache.component.html
@@ -20,24 +20,25 @@
                 </div>
             </td>
         </tr>
-        <tr>
-            <td colspan="2">
             <tr>
-                <td class="liste">
+                <td>
+                    <ul>
+                        <li class="listeNbr">
                     <div class="form-group">
                         <label for="name">Nombre de Tache</label>
                         <input id="name" type="number" class="form-control" [(ngModel)]="newTacheNbre" name="newTacheNbre" placeholder="Nombre de Tache">
                     </div>
-                </td>
-                <td class="liste">
+                    </li>
+                   
+                        <li class="listeNbr">
                     <div class="form-group">
                         <label for="name">coût unitaire</label>
                         <input id="name" type="number" class="form-control" [(ngModel)]="newTacheCout" name="newTacheCout" placeholder="coût unitaire">
                     </div>
+                    </li>
+                    </ul>
                 </td>
             </tr>
-            </td>
-        </tr>
         <tr>
             <td>
                 <ul>
@@ -82,6 +83,17 @@
                             </ul>
                         </div>
                     </li>
+                    <li class="liste">
+                        <div class="form-group">
+                            <label for="name">Département exécutant:</label>
+                            <ul>
+                                <li *ngFor="let  dep of dep_nom" [for]="dep.id">
+                                    <input type="radio" name="departement" [id]="dep.id" [value]="dep.id" [checked]="dep.checked" (change)="selectDepartement(dep)" />&nbsp;{{dep.attributes.nom}}
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    
                 </ul>
             </td>
         </tr>
