--- a/src/app/pages/type/type.component.scss
+++ b/src/app/pages/type/type.component.scss
@@ -34,3 +34,9 @@ th, td {
 ul{
   list-style-type: none;
 }
+button{
+  background-color: white;
+  color: black;
+  border-color:  white;
+  border-style: outset;
+}
