--- a/src/app/pages/facture/facture.component.html
+++ b/src/app/pages/facture/facture.component.html
@@ -28,25 +28,34 @@
     <th>cout</th>
     <th>Totale</th>
   </tr>
-   <ng-container *ngIf="startDate && endDate">
+  <!-- *ngIf="startDate && endDate"-->
+   <ng-container>
     <h4>Taches:</h4>
     <tr *ngFor="let group of groupedTaches">
       <td>
-        <h2>{{ group.societe }}</h2>
+        <h2 (click)="toggleDetails(group)">{{ group.societe }}</h2>
       </td>
       <td colspan="2">
         <div *ngFor="let departement of group.departements">
-      <td style="width: 410px;vertical-align: top;">
-        <h3>{{ departement.nom }}</h3>
-      </td>
-      <td>
-        <ul style="float: right;">
-          <li *ngFor="let tache of departement.taches">
-            {{ calculateTache(tache.attributes.type_tache, tache.attributes.nombre_de_tache, tache.attributes.cout_par_piece) }}
-          </li>
-        </ul>
-      </td>
-      </div>
+          <td style="width: 410px;vertical-align: top;">
+            <div>
+              <h3>{{ departement.nom }}</h3>
+            </div>
+          </td>
+          <td style="width: 270px;">
+            <ul style="float: left;">
+              <li *ngFor="let tache of departement.taches">
+                <ng-container *ngIf="group.showDetails">
+                  <span>Nom:{{ tache.attributes.nom_tache }} </span>
+                  <span>Type:{{ tache.attributes.type_tache }}</span>
+                </ng-container>
+                <p>
+                  {{ calculateTache(tache.attributes.type_tache, tache.attributes.nombre_de_tache, tache.attributes.cout_par_piece) }}
+                </p>
+              </li>
+            </ul>
+          </td>
+        </div>
       </td>
       <td>
         {{ calculateTotalDepartementTaches(group.departements) }}
@@ -56,7 +65,7 @@
     <tr *ngFor="let group of groupedData">
       <ng-container *ngIf="calculateTotalDepartmentProjet(group.data) !== 0">
         <td>
-          <h2>{{ group.societe }}</h2>
+          <h2 (click)="toggleDetails(group)" (click)="selectGroup(group);">{{ group.societe }}</h2>
         </td>
         <td colspan="2">
           <div *ngFor="let item of group.data">
@@ -66,9 +75,18 @@
         <td>
           <ul style="float: right;">
             <li *ngFor="let projet of item.projets">
+              <ng-container *ngIf="group.showDetails">
+                <span>{{ projet.attributes.nom_projet }} </span>
+                <p>
+                <span> DateDebut: {{ projet.attributes.date_debut }} </span>
+                <span> DateFin: {{ projet.attributes.date_fin }} </span>
+              </p>
+              </ng-container>
+              <p>
               <ng-container *ngIf="projet.totalcost !== 0">
                 {{ projet.totalcost }}
               </ng-container>
+            </p>
             </li>
           </ul>
         </td>
@@ -81,3 +99,7 @@
     </tr>
   </ng-container>
 </table>
+<div *ngIf="selectedGroup">
+  <h3>Société: {{ selectedGroup.societe }}</h3>
+  <button  (click)="openPDFDetails()">Facture PDF</button>
+</div>
