--- a/src/app/pages/tache/edit-tache/edit-tache.component.html
+++ b/src/app/pages/tache/edit-tache/edit-tache.component.html
@@ -69,6 +69,10 @@
                               <input type="radio" id="Annuel" name="option" value="Annuel" [(ngModel)]="tache_type">
                               <label>Annuel</label>
                             </li>
+                            <li>
+                              <input type="radio" id="Occasionnelle" name="option" value="Occasionnelle" [(ngModel)]="tache_type">
+                              <label>Occasionnelle</label>
+                            </li>
                         </ul>
                     </div>
                 </li>
