--- a/src/app/pages/tache/tache.component.html
+++ b/src/app/pages/tache/tache.component.html
@@ -16,7 +16,7 @@
       <td>
         <span>{{tache.attributes.nom_tache}}</span>
       </td>
-      <td>
+      <td style="width: 150px;">
         <span>{{tache.attributes.Description}}</span>
       </td>
       <td>
