--- a/src/app/pages/facture/facture.component.html
+++ b/src/app/pages/facture/facture.component.html
@@ -29,6 +29,7 @@
    <ng-container *ngIf="startDate && endDate">
     <h4>Taches:</h4>
     <tr *ngFor="let group of groupedTaches">
+      <ng-container *ngIf="calculateTotalDepartementTaches(group.departements) !== 0">
       <td>
         <h2 (click)="selectGroup(group)">  {{ group.societe }}</h2>
       </td>
@@ -41,6 +42,7 @@
           </td>
         </div>
       </td>
+    </ng-container>
     </tr>
     <h4>Projets:</h4>
     <tr *ngFor="let group of groupedData">
