--- a/src/app/pages/tache/edit-tache/edit-tache.component.html
+++ b/src/app/pages/tache/edit-tache/edit-tache.component.html
@@ -42,38 +42,9 @@
         <td>
             <ul>
                 <li class="liste">
-                    <div>
-                        <label class="type" for="name">Type de Tache:</label>
-                        <ul>
-                          <li>
-                            <input type="radio" id="Journalier" name="option" value="Journalier" [(ngModel)]="tache_type">
-                            <label>Journalier</label>
-                          </li>
-                          <li>
-                            <input type="radio" id="Hebdomadaire" name="option" value="Hebdomadaire" [(ngModel)]="tache_type">
-                            <label>Hebdomadaire</label>
-                          </li>
-                          <li>
-                            <input type="radio" id="Mensuel" name="option" value="Mensuel" [(ngModel)]="tache_type">
-                            <label>Mensuel</label>
-                          </li>
-                          <li>
-                              <input type="radio" id="Trimestriel" name="option" value="Trimestriel" [(ngModel)]="tache_type">
-                              <label>Trimestriel</label>
-                            </li>
-                            <li>
-                              <input type="radio" id="Semestriel" name="option" value="Semestriel" [(ngModel)]="tache_type">
-                              <label>Semestriel</label>
-                            </li>
-                            <li>
-                              <input type="radio" id="Annuel" name="option" value="Annuel" [(ngModel)]="tache_type">
-                              <label>Annuel</label>
-                            </li>
-                            <li>
-                              <input type="radio" id="Occasionnelle" name="option" value="Occasionnelle" [(ngModel)]="tache_type">
-                              <label>Occasionnelle</label>
-                            </li>
-                        </ul>
+                    <div class="form-group">
+                        <label for="name">Date de Tache:</label>
+                        <input id="name" type="date" class="form-control" [(ngModel)]="tache_Date" name="newTacheDate">
                     </div>
                 </li>
                 <li class="liste">
